@@ -15,6 +15,7 @@ mlUnit development snapshot
   - Fix: Error prelude not filtered for newer MATLABs (around R2011b)
   - Fix: Test suite functions whose host function is not declared on the very
     first line lead to an unintelligible error.
+  - Fix: some numeric arrays deemed equal, even if of different size
 
 
 mlUnit 1.6.6 (2013-12-13)
